Allow to save/save-versioned raw image which were imported, but not edited

Clean up the mechanism which updates undo/redo state, remove bool parameters
and add state object. Clean up canvas indirections.
Distinguish "has any changes" and "has changes which can be undone", where the
latter excludes RAW import. Some actions are enabled according to the former,
some follow the latter property.
By design decision, a RAW import result can now be saved, but when closing the
window without saving, no save/discard prompt will be shown.

BUG: 276061